--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -124,6 +124,31 @@ Choose the approach that makes the most sense for your character and storytellin
 SoloEarlyOutlookPage.upbringings,Upbringings,,,
 SoloEarlyOutlookPage.castes,Castes,,,
 SoloEarlyOutlookPage.aspirations,Aspirations,,,
+SoloEarlyOutlookDetailsPage.errorDiscipline,Please select a discipline.,,,
+SoloEarlyOutlookDetailsPage.errorFocus,Please select a focus.,,,
+SoloEducationPage.instruction.alliedMilitary,"Outside of Starfleet, the Milky Way Galaxy hosts many other security and military organizations. Instead of a Starfleet or Klingon officer, you might choose to build a Captain’s Log story around a Bajoran freedom fighter, a member of the Andorian Imperial Guard, or a radically candid warrior of the Qowat Milat.
+
+As an alternative to attending Starfleet Academy, to select the type of military training your character has received, choose from the options in the following table, or randomly select one.",,,
+SoloEducationPage.instruction.ambassadorDiplomat,"Ambassadorial characters are often found accompanying Starfleet vessels, and in other groups and situations conducive to telling exciting stories. These characters don’t necessarily have Starfleet training, but by necessity they are well-trained and well-informed, and quite capable of taking part in dangerous missions when necessary.
+
+Diplomat characters do not necessarily hold an active Starfleet rank or other military rank (though many well-known diplomats are retired Starfleet military).
+
+To select your character’s diplomatic training, choose one of the types in the following table or randomly select one.",,,
+SoloEducationPage.instruction.civilian,"Civilian characters are known to become involved in adventures great and small throughout the Star Trek universe, from ambassador Sarek’s strategic negotiations to the discovery of the U.S.S. Protostar by a roguish Dal R’El. Building a Captain’s Log story around a civilian character offers a chance to shine a light on life outside of Starfleet.
+
+Civilian characters hold no Starfleet rank or other military rank, though they may be granted an honorary rank.
+
+To select your character’s civilian training, choose one of the types in the following matrix, or randomly select one.",,,
+SoloEducationPage.instruction.starfleet,"The years spent at Starfleet Academy are some of the most memorable and definitive of an officer’s life, shaping the direction of their career going forward. For those who pass the grueling entrance examinations, the Academy takes four years, covering a mixture of intense training, academic studies, and practical experiences. Much of this takes place within the main Starfleet Academy campus in San Francisco on Earth, but other campuses and annexes exist across the Federation, and a cadet may spend time at any of these before they graduate.
+
+A graduate of the Academy receives a commission as a Starfleet officer, with the rank of ensign, after which they may wait several weeks, or even months, for their first assignment. Some cadets – particularly those pursuing a doctorate – choose a path that requires an additional year or two of training and study, and instead graduate at the rank of lieutenant (junior grade).
+
+You may choose your character’s Academy track, or randomly select it.",,,
+SoloEducationPage.type.starfleet,Starfleet Academy,,,
+SoloEducationPage.type.civilian,Civilian Career Training,,,
+SoloEducationPage.type.alliedMilitary,Allied Military Training,,,
+SoloEducationPage.type.ambassadorDiplomat,Diplomatic Training,,,
+SoloEducationTypePage.instruction,"Some characters will have received their education at Starfleet Academy. Others may have received theirs on the streets of a busy commercial colony, traveling among the stars, or within the societal structure of another civilization.",,,
 SoloEnvironmentDetailsPage.speciesText,Which species' did the character grow up amongst?,Unter welchen Spezies ist der Charakter aufgewachsen?,,
 SoloEnvironmentPage.instruction,"In choosing your character's environment, you'll select either a setting or a condition. Each offers different storytelling prompts, but both provide the same type of benefits to your character.
 
@@ -323,6 +348,7 @@ Page.title.characterType,Character Type,Art des Charakters,Tipo de carácter,Typ
 Page.title.systemGeneration,System Generation,System-Erschaffung,Generación del Sistema Estelar,Génération du système stellaire
 Page.title.sectorDetails,Sector Details,Sektordetails,Detalles del sector,Détails du secteur
 Page.title.soloEarlyOutlook,Early Outlook,,,
+Page.title.soloEarlyOutlookDetails,Early Outlook Details,,,
 Page.title.starSystemDetails,Star System Details,Details zum Sternensystem,Detalles del sistema Star,Détails du système stellaire
 Page.title.starshipToolSelection,Starship Tool Selection,Auswahl der Raumschiff-Erschaffung,Herramientas de naves espaciales,Outils de vaisseau spatial
 Page.title.toolSelection,Tool Selection,Werkzeug-Auswahl,,Selection d'Outil
